[gd_scene load_steps=4 format=3 uid="uid://dgk48lc2nbjau"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_wbdkv"]
[ext_resource type="PackedScene" uid="uid://cvpi6tgef522m" path="res://scenes/title_menu.tscn" id="2_vqbio"]
[ext_resource type="PackedScene" uid="uid://67qilqj48jpn" path="res://scenes/level_0.tscn" id="3_8oam8"]

[node name="World" type="Node2D"]
script = ExtResource("1_wbdkv")

[node name="TitleMenu" parent="." instance=ExtResource("2_vqbio")]

[node name="Level0" parent="." instance=ExtResource("3_8oam8")]
visible = false

[connection signal="change_scene" from="TitleMenu" to="." method="_on_title_menu_change_scene"]
